--- a/blackorwhite.css
+++ b/blackorwhite.css
@@ -1,17 +1,17 @@
 body {
   font-family: Tahoma, Helvetica, Arial, sans-serif;
-  font-size: 86%;
+  font-size: 90%;
   margin: 0;
 }
 
 #desc {
-  padding: 9px 14px;
-  background-color: #F0F0F0;
+  padding: 14px 19px;
+  background-color: #9e9ed6;
 }
 
 #container {
-  margin: 80px auto 0px auto;
-  width: 600px;
+  margin: 60px auto 0px auto;
+  width: 1200px;
 }
 
 .section {
@@ -20,13 +20,13 @@ body {
 }
 
 .section-header {
-  margin-bottom: 20px;
-  font-size: 1.2em;
+  margin-bottom: 30px;
+  font-size: 1.5em;
 }
 
 #subtitle {
   margin-top: 2em;
-  font-size: .95em;
+  font-size: 1.2em;
   color: #555;
   padding: 0px 80px;
 }
@@ -48,19 +48,30 @@ body {
 .swatch {
   margin: 10px;
   padding: 40px;
-  height: 60px;
-  width: 70px;
+  height: 80px;
+  width: 90px;
   cursor: pointer;
+  -moz-border-radius-topleft:10px;
+  -webkit-border-top-left-radius:10px;
+  -moz-border-radius-bottomleft:10px;
+  -webkit-border-bottom-left-radius:10px;
+  -moz-border-radius-topright:10px;
+  -webkit-border-top-right-radius:10px;
+  -moz-border-radius-bottomright:10px;
+  -webkit-border-bottom-right-radius:10px;
 }
 
 .swatch {
-  font-size: .97em;
+  font-size: 1.2em;
 }
 
 .swatch-box {
   display: inline-block;
 }
-
+.swatch-text {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
 .view-code {
   color: #aaa;
   cursor: pointer;
@@ -85,7 +96,7 @@ body {
 }
 
 #test-box {
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .pass-button {
@@ -160,4 +171,17 @@ body {
   background-color: #d0d0d0;
   width: 0%;
   height: 100%;
+}
+.container {
+ width: 100%;
+ height: 100%;
+ display: -webkit-flex;
+ display: -ms-flexbox;
+ display: flex;
+ -webkit-align-items: center;
+ -ms-flex-align: center;
+ align-items: center;
+ -webkit-justify-content: center;
+ -ms-flex-pack: center;
+ justify-content: center;
 }
