--- a/css/MapStyle.css
+++ b/css/MapStyle.css
@@ -8,6 +8,13 @@
 	color : #283018;
 }
 
+#search {
+    display: block;
+    position: absolute;
+    z-index: 3;
+    top: 20px;
+    left: 75px;
+}
 
 #container {
 	background: #677077;
@@ -24,7 +31,7 @@
 	}
 
 #panel{
-	margin-top:9.6px;
+	margin-top:10.4px;
 	background: #677077;
 	width: 204.3px;
 	max-height: 593px;
@@ -43,7 +50,7 @@
 	font: 14px "Lobster", Arial, Lobster, sans-serif;
 	color : white;
 	text-align: left;
-	max-height: 500px;
+	max-height: 300px;
 }
 #panel .airportinfo{
 	margin-top: 3px;
@@ -54,7 +61,6 @@
 	color : #677077;
 	text-decoration: none;
 	cursor: pointer;
-}
 }
 
 #info{
